name:                miso-plane
version:             0.1.0.0
license:             BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  other-modules:
    Constants
    Model
    Update
    View
  build-depends:
      base
    , containers
    , ghcjs-base
    , miso
    , random
    , text
    , time
    , transformers
  default-language:    Haskell2010
  default-extensions:  DataKinds DeriveGeneric OverloadedStrings TypeOperators TypeFamilies RecordWildCards NamedFieldPuns
  ghc-options:
    -Wall
  hs-source-dirs:
    src